840
We now get:
{code}
t1024.scala:3: error: type Test.T is not a stable prefix
  val x = new AnyRef with T#U { }
                            ^
{code}
